# xenon

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  todo.md
.github/: FUNDING.yml  dependabot.yml
app/: Cargo.toml
app/src/: main.rs  manifest.rs
crates/xenon-common/: Cargo.toml
crates/xenon-common/src/: error.rs  lib.rs  result.rs  size.rs
crates/xenon-common/src/format/: base64ct.rs  hex.rs  mod.rs
crates/xenon-crypto/: Cargo.toml
crates/xenon-crypto/src/: algorithm.rs  asymmetric.rs  expiry.rs  fingerprint.rs  hash.rs  key.rs  lib.rs  rand.rs  symmetric.rs
crates/xenon-crypto/src/asymmetric/: curve25519.rs  curve448.rs  dh.rs  ed25519.rs  mod.rs  signer.rs  verifier.rs  x25519.rs
crates/xenon-crypto/src/format/: base64ct.rs  mod.rs  pem.rs
crates/xenon-crypto/src/hash/: digest.rs  hkdf.rs  mod.rs  sha2.rs  sha3.rs
crates/xenon-crypto/src/key/: aes.rs  asymmetric.rs  chacha20.rs  ed25519.rs  mod.rs  symmetric.rs  x25519.rs
crates/xenon-crypto/src/symmetric/: aead.rs  aes.rs  chacha20.rs  mod.rs
crates/xenon-crypto/tests/: algorithm.rs  asymmetric.rs  expiry.rs  key.rs  rand.rs  symmetric.rs
crates/xenon-keyring/: Cargo.toml
